--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>{{ page.title }} - infracamp.org</title>
 
-    <link rel="icon" href="://infracamp.org/assets/infracamp.png">
+    <link rel="icon" href="//infracamp.org/assets/infracamp.png">
     <meta name="description" content="{{ page.description }}">
 
     <meta property="og:site_name" content="Infracamp.org" />
@@ -14,11 +14,11 @@
     <meta property="og:description" content="{{ page.og_description }}" />
     <meta property="og:image" content="https://infracamp.org/assets/infracamp.png" />
 
-    <link rel="stylesheet" href="://infracamp.org/assets/all.css">
+    <link rel="stylesheet" href="//infracamp.org/assets/all.css">
 
 </head>
 <body>
-
+    {% include navbar.html %}
     <div style="margin: 30px;"></div>
     <div class="container container-fluid">
         <div class="row flex-xl-nowrap">
